--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
   <input type="text" id="input" placeholder="type something here">
   <button id="get">Get a cat meme</button>
   <br>
-  <img id="cat-image" src="" alt="Cat Image" >
-
+  <img id="cat-image" src="" alt="Cat Image" class="cat-con" >
+  <a href="" download>
+  <button id="download">Download Image</button>
+  </a>
   <script src="https://cdn.jsdelivr.net/npm/axios@1.13.2/dist/axios.min.js"></script>
   <script src="app.js"></script>
 </body>
